[gd_scene load_steps=6 format=2]

[ext_resource path="res://Misc/UI/Icons/Kenney/mouse_l_click.png" type="Texture" id=1]
[ext_resource path="res://Misc/UI/Icons/Kenney/mouse.png" type="Texture" id=2]
[ext_resource path="res://Misc/UI/Icons/Kenney/arrow_left.png" type="Texture" id=3]
[ext_resource path="res://Misc/UI/Icons/Kenney/arrow_right.png" type="Texture" id=4]
[ext_resource path="res://Misc/UI/Icons/mouse.gd" type="Script" id=5]

[node name="Mouse" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 433.0
margin_top = 271.0
margin_right = 591.0
margin_bottom = 329.0

[node name="UpArrowContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 158.0
__meta__ = {
"_editor_description_": "Unused for the moment"
}

[node name="UpArrow" type="TextureRect" parent="VBoxContainer/UpArrowContainer"]
margin_left = 79.0
margin_right = 79.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 4.0
margin_right = 158.0
margin_bottom = 54.0

[node name="LeftArrowContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
__meta__ = {
"_editor_description_": ""
}

[node name="LeftArrow" type="TextureRect" parent="VBoxContainer/HBoxContainer/LeftArrowContainer"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 3 )

[node name="MouseContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 54.0
margin_right = 104.0
margin_bottom = 50.0
__meta__ = {
"_editor_description_": ""
}

[node name="MouseNeutral" type="TextureRect" parent="VBoxContainer/HBoxContainer/MouseContainer"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 2 )

[node name="MouseLClick" type="TextureRect" parent="VBoxContainer/HBoxContainer/MouseContainer"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 1 )

[node name="MouseRClick" type="TextureRect" parent="VBoxContainer/HBoxContainer/MouseContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 25.0
margin_bottom = 25.0
__meta__ = {
"_editor_description_": "Unused for the moment"
}

[node name="RightArrowContainer" type="CenterContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 108.0
margin_right = 158.0
margin_bottom = 50.0
__meta__ = {
"_editor_description_": ""
}

[node name="RightArrow" type="TextureRect" parent="VBoxContainer/HBoxContainer/RightArrowContainer"]
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 4 )

[node name="DownArrowContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 58.0
margin_right = 158.0
margin_bottom = 58.0
__meta__ = {
"_editor_description_": "Unused for the moment"
}

[node name="DownArrow" type="TextureRect" parent="VBoxContainer/DownArrowContainer"]
margin_left = 79.0
margin_right = 79.0
